# bicit

./: .gitignore  Cargo.toml  Justfile  README.md
.zed/: debug.json
bicit/: Cargo.toml  build.rs
bicit-cli/: Cargo.toml
bicit-cli/fail/: fail.gpx  fail.gpx~
bicit-cli/src/: context.rs  lib.rs  main.rs  map.rs
bicit-ui/: Cargo.toml  index.html
bicit-ui/src/: export.rs  main.rs  ui.rs
bicit/src/: context.rs  embedded_templates.rs  lib.rs  map.rs  render.rs  template.rs  time.rs
bicit/test/: t1.gpx
