[package]
name = "bicit-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }
egui = "0.33.3"
tiny-skia = "0.11"
# Map rendering (use git main, not crates.io release)
galileo = { git = "https://github.com/galileo-map/galileo", package = "galileo" }
galileo-types = { git = "https://github.com/galileo-map/galileo", package = "galileo-types" }
galileo-egui = { git = "https://github.com/galileo-map/galileo", package = "galileo-egui" }
image = { version = "0.25.9", default-features = false, features = ["png"] }
geo-types = "0.7.18"
bicit = { version = "0.1.0", path = "../bicit" }
rfd = "0.16.0"
anyhow = "1.0.100"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
resvg = "0.45"
usvg = "0.45"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.19.0", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "HtmlAnchorElement",
    "Url",
    "Window",
] }
getrandom = { version = "0.2.16", features = ["js"] }
resvg = { version = "0.45", default-features = false, features = [
    "raster-images",
    "text",
] }
usvg = { version = "0.45.1", default-features = false, features = ["text"] }
