[package]
name = "bicit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
gpx = "0.10.0"
geo = "0.32.0"
geo-types = "0.7.18"
chrono = "0.4.42"
assert_approx_eq = "1.1.0"
time = "0.3.44"
base64 = "0.22.1"
quick-xml = "0.38.4"
tiny-skia = "0.11"

# Map rendering (use git main, not crates.io release)
fontdb = { version = "0.23.0", default-features = false }
galileo = { git = "https://github.com/galileo-map/galileo", package = "galileo" }
galileo-types = { git = "https://github.com/galileo-map/galileo", package = "galileo-types" }
image = { version = "0.25.9", default-features = false, features = ["png"] }
wgpu = "27.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["rt", "time"] }
resvg = "0.45"
usvg = "0.45"

[target.'cfg(target_arch = "wasm32")'.dependencies]
resvg = { version = "0.45", default-features = false, features = [
    "raster-images",
    "text",
] }
usvg = { version = "0.45.1", default-features = false, features = ["text"] }
